# platform.tools.security

./: OWNERS
example_fuzzer/: Android.bp
fuzzing/: OWNERS
fuzzing/brotli_java_compress_fuzzer/: Android.bp
fuzzing/example_fuzzer/: Android.bp  (+1 more)
remote_provisioning/: OWNERS
remote_provisioning/hwtrust/: Android.bp  Cargo.toml  OWNERS  README.md  TEST_MAPPING
remote_provisioning/hwtrust/cxxbridge/: hwtrust.cpp  lib.rs
remote_provisioning/hwtrust/cxxbridge/include/hwtrust/: hwtrust.h
remote_provisioning/hwtrust/src/: bcc.rs  cbor.rs  dice.rs  lib.rs  main.rs  publickey.rs  rkp.rs  session.rs
remote_provisioning/hwtrust/src/bcc/: chain.rs
remote_provisioning/hwtrust/src/cbor/: dice.rs  field_value.rs  publickey.rs  rkp.rs
remote_provisioning/hwtrust/src/cbor/dice/: chain.rs  entry.rs  field_value.rs  profile.rs  publickey.rs
remote_provisioning/hwtrust/src/cbor/rkp/: csr.rs  device_info.rs
remote_provisioning/hwtrust/src/dice/: chain.rs  entry.rs
remote_provisioning/hwtrust/src/rkp/: csr.rs  device_info.rs  factory_csr.rs  protected_data.rs
remote_provisioning/hwtrust/testdata/csr/: v2_csr.base64  v3_csr.base64
remote_provisioning/hwtrust/testdata/factory_csr/: all_versions_valid.json  v2_ed25519_valid.json  v2_p256_valid.json  v3_ed25519_valid.json  v3_p256_extra_uds_cert_in_chain.json  v3_p256_mismatched_uds_certs.json  v3_p256_valid.json  v3_p256_valid_with_uds_certs.json
remote_provisioning/hwtrust/tests/: hwtrust_cli.rs
sanitizer-status/: Android.bp  Android.mk  sanitizer-status.c  sanitizer-status.cpp  sanitizer-status.go
(+405 files in other folders)
